# subjects_notes

./: LICENSE  README.md
algorithms/: README.md
algorithms/doc/code/run_fast/make_your_app_flys/: CMakeLists.txt
algorithms/doc/code/run_fast/make_your_app_flys/include/: rgb2yuv.h
algorithms/doc/code/run_fast/make_your_app_flys/src/: rgb2yuv.cpp
block_chain/: README.md
computer_vision/: Awesome Computer Vision.md  README.md  people_in_computer_vision.md  rtsp_protocal_format.md  video-dehaze-code-learning.md  video-stream-fetch-synchronously.md
computer_vision/cv-applications/: README.md  README_code.md
computer_vision/cv-applications/code-待整理/code_template/: CMakeLists.txt
computer_vision/cv-applications/code-待整理/code_template/src/: process.cpp
computer_vision/cv-applications/code-待整理/klm_rewrite/box_filter/: CMakeLists.txt
computer_vision/cv-applications/code-待整理/klm_rewrite/box_filter/include/: box_filtering.h
computer_vision/cv-applications/code-待整理/klm_rewrite/box_filter/src/: box_filtering.cpp  main.cpp
computer_vision/cv-applications/code-待整理/video_process-framework/: CMakeLists.txt  README.md
computer_vision/cv-applications/code-待整理/video_process-framework/include/: featuretracker.h  videoprocessor.h
computer_vision/cv-applications/code-待整理/video_process-framework/src/: tracker.cpp
computer_vision/cv-applications/common-applications/utils-construct/calc_histogram/: CMakeLists.txt
computer_vision/cv-applications/common-applications/utils-construct/calc_histogram/src/: calc_histogram.cpp  histogram.h
computer_vision/cv-paper-material/: dataPatent_v1.md  dataPatent_v2.md  visual-genome.md
computer_vision/learning-opencv-practical/: OPENCV_README.md
computer_vision/video_audio/: ffmpeg_rtsp.md
computer_vision/video_audio/video_decode/rtsp_ffmpeg_test/: CMakeLists.txt  README.md
computer_vision/video_audio/video_decode/rtsp_ffmpeg_test/src/: ffmpeg_rtsp2image.cpp  ffmpeg_rtsp2video.cpp
develop_language/: README.md  work_on_server_effective.md
develop_language/VS2015/: InstallSheildPackApp.md  LibDllCollections.md  SoftWareUsage.md  UTF-8.md  VS2015Usage.md  VSCompileErrors.md
develop_language/algorithm/: README.md
develop_language/arduino/: arduino_python.md  ubuntu_ide_install.md
develop_language/bash/: bash_examples.md  (+3 more)
develop_language/cmake/examples_code/SharedLibLinux/libhello/: CMakeLists.txt  hello.cpp  hello.h
develop_language/cmake/examples_code/SharedLibLinux/libhelloclass/: CMakeLists.txt  helloclass.cpp  helloclass.h
develop_language/cmake/examples_code/SharedLibLinux/src/: CMakeLists.txt  main.cpp
develop_language/cmake/examples_code/SharedLibVS/: CMakeLists.txt  README.md
develop_language/cmake/examples_code/SharedLibVS/dll_lib/: dll_lib.def
develop_language/cmake/examples_code/SharedLibVS/dll_lib/include/: dll_lib.h  dll_lib_export.h
develop_language/cmake/examples_code/SharedLibVS/dll_lib/src/: dll_lib.cpp
develop_language/cmake/examples_code/SharedLibVS/src/: main.cpp
develop_language/cpp/examples_code/bigtalk_design_patterns/: CMakeLists.txt
develop_language/cpp/examples_code/bigtalk_design_patterns/include/factory_method/: factory_method.h
develop_language/cpp/examples_code/bigtalk_design_patterns/include/simple_factory/: simple_factory.h
develop_language/cpp/examples_code/bigtalk_design_patterns/include/singleton/: singleton.h
develop_language/cpp/examples_code/bigtalk_design_patterns/src/: main.cpp
develop_language/cpp/examples_code/bigtalk_design_patterns/src/factory_method/: factory_method.cpp
develop_language/cpp/examples_code/bigtalk_design_patterns/src/simple_factory/: CMakeLists.txt  simple_factory.cpp
develop_language/cpp/examples_code/bigtalk_design_patterns/src/singleton/: singleton.cpp
develop_language/cpp/examples_code/boost/cpp2python/: CMakeLists.txt
develop_language/cpp/examples_code/boost/cpp2python/src/python/: hello.py  hello_ext.cpp
develop_language/cpp/examples_code/boost/filesystem/: CMakeLists.txt  boost_filesys.cpp
develop_language/cpp/examples_code/cpp_primer_5nd/: CMakeLists.txt
develop_language/cpp/examples_code/cpp_primer_5nd/src/default_paramter/: CMakeLists.txt  default_paramter.cpp
develop_language/cpp/examples_code/cpp_primer_5nd/src/map_instance/: CMakeLists.txt  map.txt  map_instance.cpp  sales_data.cpp  sales_data.h
develop_language/cpp/examples_code/cpp_primer_5nd/src/namespace/: CMakeLists.txt  np_declare.cpp  np_implement.cpp
develop_language/cpp/examples_code/cpp_primer_5nd/src/namespace/include/: namespace_a.hpp  namespace_b.hpp
develop_language/cpp/examples_code/cpp_primer_5nd/src/namespace/src/: main.cpp
develop_language/cpp/examples_code/cpp_primer_5nd/src/namespace/src/tools/: namespace_a.cpp  namespace_b.cpp
develop_language/cpp/examples_code/cpp_primer_5nd/src/shared_ptr/: CMakeLists.txt  shared_ptr.cpp
develop_language/cpp/examples_code/cpp_primer_5nd/src/string/: CMakeLists.txt  string_operation.cpp
develop_language/cpp/examples_code/cpp_primer_5nd/src/template/: CMakeLists.txt  template.cpp
develop_language/cpp/examples_code/cpp_primer_5nd/src/vector_operation/: CMakeLists.txt  vector_operation.cpp  vector_operation.h
develop_language/cpp/examples_code/effective_cpp/: CMakeLists.txt  README.md
develop_language/cpp/examples_code/effective_cpp/src/: main.cpp
develop_language/cpp/examples_code/effective_cpp/src/way1/: CMakeLists.txt  federation.cpp
develop_language/cpp/examples_code/effective_cpp/src/way2/: CMakeLists.txt  const_enum_inline.cpp  const_enum_inline.h
develop_language/cpp/examples_code/effective_cpp/src/way3/: CMakeLists.txt  const.cpp  const.h
develop_language/cpp/examples_code/gflag/: CMakeLists.txt  README.md  gflag.flags
develop_language/cpp/examples_code/gflag/src/: gflag_test.cpp
machine_learning/: ML_README.md  gradient_descent.md  k-means.md  ml_apply_suggestions.md
slam/: README.md  feature_point.md
slam/realsense/filter_motion_data/: CMakeLists.txt  README.md  filter_motion_data.cpp
slam/realsense/get_all_datas_cpp/: CMakeLists.txt  README.md  rgb_depth.cpp
(+514 files in other folders)
